--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,43 +1,45 @@
 doctype html
 html
   head
-    meta charset='utf-8'
+    meta(charset='utf-8')
     title= title
-    link href='/css/style.css' rel='stylesheet' type='text/css'
-    script src="/js/jquery.min.js"
+    link(href='/stylesheets/style.css' rel='stylesheet' type='text/css')
+    script(src="/javascripts/jquery.min.js")
+    script(type="text/javascript", src="/javascripts/websocket.js")
 
   body
-    div id="container" class="select-disable dim"
-      input type="hidden" id="seeking_tnr"
-      input type="hidden" id="seeking_title"
-      div id="left-bar"
-        div class="logo"
-          img class="logo" src="img/logo.png"
+    div(id="container" class="select-disable dim")
+      input(type="hidden" id="seeking_tnr")
+      input(type="hidden" id="seeking_title")
+      div(id="left-bar")
+        div(class="logo")
+          img(class="logo" src="/images/logo.png")
         if 2 <= 1
-          a href="/back"
-            button id="tilbake" class="square": img src="img/tilbake.png" id="tilbake-pil"
-              //= BACK
-        div id="avslutt-container"
-          a href="/"
-            button id="avslutt" class="square": span CLOSE <img src="img/avslutt.png" id="avslutt-ikon" />
-      div id="header"
-        div id="header-text"
+          a(href="/back")
+            button(id="tilbake" class="square"): img(src="/images/tilbake.png" id="tilbake-pil")
+              BACK
+        div(id="avslutt-container")
+          a(href="/")
+            button(id="avslutt" class="square"): span CLOSE <img src="/images/avslutt.png" id="avslutt-ikon" />
+      div(id="header")
+        div(id="header-text")
           if path == "/omtale"
-            p id="title" #{book.title}
-            p id="sub-title" #{book.authors}
+            p(id="title") #{book.title}
+            p(id="sub-title") #{book.authors}
           else if path == "/flere"
-            p id="title" #{t.menu.more_by_author}
-            p id="sub-title" #{book.authors}
+            p(id="title" #{t.menu.more_by_author})
+            p(id="sub-title" #{book.authors})
           else if path == "/relaterte"
-            p id="title" #{t.menu.similar_works}
-            p id="sub-title"
-              span "#{book.title}"&nbsp;
-              span style="font-weight:normal" av #{book.authors}
-      block contents
-        div id="contents"
-      div id="vi-leter"
+            p(id="title" #{t.menu.similar_works})
+            p(id="sub-title")
+              span("#{book.title}") &nbsp;
+              span(style="font-weight:normal") av #{book.authors}
+      div(id="contents")
+        block contents
+      
+      div(id="vi-leter")
         p vi leter
-        div id="avbryt"
-          button[class="top-button" id="avbryt-knapp"] = "avbryt"
-          button[class="top-button" id="retry-knapp"] = "Prøv på nytt"
-      div[id="overlay"]
+        div(id="avbryt")
+          button(class="top-button" id="avbryt-knapp") Avbryt
+          button(class="top-button" id="retry-knapp") Prøv på nytt
+      div(id="overlay")
