--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
   <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
   <script src="/javascripts/jquery.min.js" type="text/javascript">
 </script>
-  <script type="text/javascript" src="/javascripts/websocket.js">
+  <script type="text/javascript" src="/javascripts/rfid.js">
 </script>
 </head>
 
