--- a/views/omtale.ejs
+++ b/views/omtale.ejs
@@ -1,44 +1,73 @@
-      <div class="buffer"></div>
+<div class="buffer"></div>
 
-      <div id="content-left">
-        <div class="image-wrapper">
-          <div class="image-big"><img src=
-          "http://covers.openlibrary.org/b/id/5358800-M.jpg" class="omtalt-bok" /></div>
+  <div id="content-left">
+    <div class="image-wrapper">
+      <% if (book.cover_url) { %>
+        <div class="image-big">
+          <img src="<%= book.cover_url %>" class="omtalt-bok"/>
         </div>
-
-        <div class="ratings"></div>
-      </div>
-
-      <div id="content-right">
-        <div id="left_arrow"><img src="/images/arrow_left_inactive.png" /></div>
-
-        <div id="right_arrow"><img src="/images/arrow_right_inactive.png" /></div>
-
-        <div id="omtale-wrapper">
-          <div id="scroller">
-            <div class="no-review slide">
-              <p>no reviews</p>
+      <% } else { %>
+        <div id="omtale-bilde">
+          <div id="inner-border">
+            <div class="book-author"> 
+              <%= book.authors %>
             </div>
-          </div>
+            <div class="book-title">
+              <%= book.title %>>
+            </div>
         </div>
-      </div>
+      <% } %>
+    </div>
 
-      <div class="clearfix"></div>
+    <div class="ratings"></div>
+  </div>
 
-      <div id="content-bottom">
-        <div class="flere">
-          <h3>Flere</h3>
-
-          <div class="liste-small">
-            <input type="hidden" value="http://data.deichman.no/resource/tnr_159107"
-            class="tnr_id" />
-
-            <div class="cover-small"><img src=
-            "http://krydder.bib.no/0040/20589.bilde.1327537551.s.jpg" /></div>
-
-            <p class="title"><strong>Den grï¿½nne dagen</strong></p>
+  <div id="content-right">
+    <div id="left_arrow"><img src="/images/arrow_left_inactive.png" /></div>
+      <% if (book.review_collection.length >= 1) { %>
+        <div id="right_arrow"><img src="/images/arrow_right_active.png" /></div>
+      <% } else { %>
+        <div id="right_arrow"><img src="/images/arrow_right_inactive.png" /></div>
+      <% } %>
+    <div id="omtale-wrapper">
+      <div id="scroller">
+        <% if (book.review_collection.length >= 1) { %>
+          <% book.review_collection.forEach(function(r,i) { %>
+            <div class="slide">
+              <% if (i == 0) { %>
+                <div class="review current" id="omtale_<%= i %>">
+              <% } else { %>
+                <div class="review" id="omtale_<%= i %>" style="'display:none'">
+              <% } %>
+              <p> <%= r.review_text %> </p>
+              <p class="source"> <%= r.review_source %> </p>
+            </div>
+          <% }); %>
+        <% } else { %>
+          <div class="no-review slide">
+            <p>no reviews ... sorry</p>
           </div>
-K          <p>&nbsp;</p>
-        </div>
+        <% } %>
       </div>
     </div>
+  </div>
+
+  <div class="clearfix"></div>
+
+  <div id="content-bottom">
+    <div class="flere">
+      <h3>Flere</h3>
+
+      <div class="liste-small">
+        <input type="hidden" value="http://data.deichman.no/resource/tnr_159107"
+        class="tnr_id" />
+
+        <div class="cover-small"><img src=
+        "http://krydder.bib.no/0040/20589.bilde.1327537551.s.jpg" /></div>
+
+        <p class="title"><strong>Den grï¿½nne dagen</strong></p>
+      </div>
+        <p>&nbsp;</p>
+    </div>
+  </div>
+</div>
