--- a/views/omtale.ejs
+++ b/views/omtale.ejs
@@ -15,6 +15,7 @@
           <div class="book-title">
             <%= book.title %>>
           </div>
+        </div>
       </div>
     <% } %>
   </div>
@@ -39,8 +40,9 @@
             <% } else { %>
               <div class="review" id="omtale_<%= i %>" style="'display:none'">
             <% } %>
-            <p> <%= r.review_text %> </p>
+            <p> <%- r.review_text %> </p>
             <p class="source"> <%= r.review_source %> </p>
+            </div>
           </div>
         <% }); %>
       <% } else { %>
@@ -58,7 +60,8 @@
   <div class="flere">
     <% if (book.same_author_collection.length != 0) { %>
       <h3>Flere</h3>
-      <% book.same_author_collection.forEach(function(b,i) { %>
+      <% num = book.same_author_collection.length < 5 ? book.same_author_collection.length : 3 %>
+      <% book.same_author_collection.slice(0,num).forEach(function(b,i) { %>
         <div class="liste-small">
           <input type="hidden" class="tnr_id" value="<%= b.book_id %>"/>
           <% if (b.cover_url) { %>
@@ -69,17 +72,25 @@
             <div class="cover-small-missing">
               <%= b.authors %> <strong> <%= b.title %></strong>
             </div>
-            <p>&nbsp;</p>
+            
           <% } %>
           <p class="title"> <strong> <%= b.title %></strong> </p>
         </div> 
       <% }); %>
+      <% if (book.same_author_collection.length > 4) { %>
+        <a href="/flere" />
+        <div class="cover-small">
+          <div class="cover-small-missing">se mer</div>
+        </div>
+      <% } %>
     <% } %>
+    <p>&nbsp;</p>
   </div> 
   <% if (book.similar_works_collection.length != 0) { %>
     <div class="relaterte">
       <h3>Relaterte</h3>
-      <% book.similar_works_collection.forEach(function(b,i) { %>
+      <% num = book.same_author_collection.length < 5 ? book.same_author_collection.length : 3 %>
+      <% book.similar_works_collection.slice(0,num).forEach(function(b,i) { %>
         <div class="liste-small">
           <input type="hidden" class="tnr_id" value="<%= b.book_id %>"/>
           <% if (b.cover_url) { %>
@@ -104,3 +115,118 @@
     </div>
   <% } %>
 </div>
+<script type='text/javascript'>
+  $(document).ready(function () {
+
+    $('button#avbryt-knapp').on('click', function() {
+      $('#overlay').hide();
+      $('#vi-leter').hide();
+      if(request) {request.abort();} //abort running requests
+    });
+
+    $('#indicator li:first').addClass("active");
+
+    $('#left_arrow').on('click', function(){
+      var current = parseInt($('.current').attr('id').substr(7));
+      var numReviews = $('.review').size();
+
+      if (current > 0) {
+        var next = current - 1;
+        $('.current').removeClass('current').hide();
+        $('#omtale_'+next).addClass('current').show();
+
+        $('#indicator li').removeClass('active');
+        $('#indicator li:eq(' + next + ')').addClass('active');
+
+        $('#right_arrow img').attr('src', "/img/arrow_right_active.png");
+        if (next == 0) {
+          $('#left_arrow img').attr('src', "/img/arrow_left_inactive.png");
+        }
+      }
+    });
+
+    $('#right_arrow').on('click', function(){
+      var current = parseInt($('.current').attr('id').substr(7));
+      var numReviews = $('.review').size();
+
+      if (current < (numReviews -1)) {
+        var next = current + 1;
+        $('.current').removeClass('current').hide();
+        $('#omtale_'+next).addClass('current').show();
+
+        $('#indicator li').removeClass('active');
+        $('#indicator li:eq(' + next + ')').addClass('active');
+
+        $('#left_arrow img').attr('src', "/img/arrow_left_active.png");
+        if (next == numReviews -1) {
+          $('#right_arrow img').attr('src', "/img/arrow_right_inactive.png");
+        }
+      }
+
+    });
+
+    $('.liste-small').on('click', function(evt) {
+      evt.preventDefault();
+        var title = $(this).find('p.title').html();
+        var uri = $(this).find('input.tnr_id').val();
+        var tnr = /tnr_(.*)/.exec(uri)[1];
+        console.log(tnr);
+        // Save tnr & title in case of retry
+        $('#seeking_tnr').val(tnr);
+        $('#seeking_title').val(title);
+
+        // show overlay
+        $('button#retry-knapp').hide();
+        $('#overlay').show();
+        $('button#avbryt-knapp').html('Avbryt');
+        $('div#vi-leter p').html("Henter info om \"" + title + '" <div id="loading"></div>' );
+        $('#vi-leter').show();
+
+        request = $.ajax({
+          url: '/populate/'+tnr,
+          type: 'GET'});
+
+        request.done(function(msg) {
+          //$.get('/copy', function(data) {
+            window.location.replace("/omtale/"+tnr);
+          //});
+        });
+
+        request.fail(function(jqXHR, textStatus, errorThrown) {
+          $('div#vi-leter p').html('&#9760; Beklager, dette tok for lang tid!' );
+          $('button#retry-knapp').show();
+          return;
+        });
+    });
+
+    $('#retry-knapp').on('click', function(evt) {
+      evt.preventDefault();
+        var uri = $('#seeking_tnr').val();
+        var title = $('#seeking_title').val();
+        var tnr = /tnr_(.*)/.exec(uri)[1];
+        
+        // show overlay
+        $('button#retry-knapp').hide();
+        $('#overlay').show();
+        $('button#avbryt-knapp').html('Avbryt');
+        $('div#vi-leter p').html("#{t.fetching_info} \"" + title + '" <div id="loading"></div>' );
+        $('#vi-leter').show();
+
+        request = $.ajax({
+          url: '/populate/'+tnr,
+          type: 'GET'});
+
+        request.done(function(msg) {
+          $.get('/copy', function(data) {
+            window.location.replace("/omtale");
+          });
+        });
+
+        request.fail(function(jqXHR, textStatus, errorThrown) {
+          $('div#vi-leter p').html('&#9760; Beklager, dette tok for lang tid!' );
+          $('button#retry-knapp').show();
+          return;
+        });
+    });
+  });
+</script>
