cleaned up abit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="container" class="select-disable dim" style="background-image:url('/img/startscreen.png')" >
+  <div id="container" class="select-disable dim" style="background-image:url('/images/startscreen.png')" >
     <input type="hidden" id="seeking_tnr" /><input type="hidden" id="seeking_title" />
 
     <div id="left-bar">
