--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,7 +51,7 @@ p.source         { font-size: 0.7em; margin-top:1em; font-weight:bold;}
 
 div#debug          { background-color:yellow; border: 1px solid black; border-radius: 2px;}
 div#container      { width: 1680px; height:1049px; color: #222; border:0px solid black; overflow: hidden;
-                     background-image: url("../img/leftbar.png"); background-repeat: no-repeat;}
+                     background-image: url("../images/leftbar.png"); background-repeat: no-repeat;}
 div#nysgjerrig     { width:100%; height: 100%; vertical-align: middle}
 div#nysgjerrig-tittel { margin-top:100px; font-size: 6em; font-weight: bold; text-align: center}
 div#nysgjerrig-undertittel { margin:200px;font-size: 4em; text-align: center}
