--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,10 +6,8 @@
 
   <title><% title %></title>
   <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
-  <script src="/javascripts/jquery.min.js" type="text/javascript">
-</script>
-  <script type="text/javascript" src="/javascripts/rfid.js">
-</script>
+  <script src="/javascripts/jquery.min.js" type="text/javascript" />
+  <script type="text/javascript" src="/javascripts/rfid.js" />
 </head>
 
 <body>
