--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
 
   <title>Aktive hyller</title>
   <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
-  <script src="/javascripts/jquery.min.js" type="text/javascript" />
-  <script type="text/javascript" src="/javascripts/rfid.js" />
+  <script type="text/javascript" src="/javascripts/jquery.min.js" ></script>
+  <script type="text/javascript" src="/javascripts/rfid.js"></script>
 </head>
 
 <body>
