--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,7 @@
   "HTML Tidy for Linux/x86 (vers 25 March 2009), see www.w3.org" />
   <meta charset="utf-8" />
 
-  <title><% title %></title>
+  <title><%= title %></title>
   <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="/javascripts/jquery.min.js" ></script>
   <script type="text/javascript" src="/javascripts/rfid.js"></script>
@@ -12,19 +12,41 @@
 
 <body>
   <div id="container" class="select-disable dim">
-    <input type="hidden" id="seeking_tnr" /> <input type="hidden" id="seeking_title" />
+    <input type="hidden" id="seeking_tnr" /> 
+    <input type="hidden" id="seeking_title" />
 
     <div id="left-bar">
       <div class="logo"><img src="/images/logo.png" class="logo" /></div>
-
+      <% if (session.history.length > 0) { %>
+        <a href="/back">
+          <button id="tilbake" class="square"><img src="/images/tilbake.png" id="tilbake-pil"/>TILBAKE</button>
+        </a>
+      <% } %>
       <div id="avslutt-container">
-        <a href="/"><button id="avslutt" class="square"><a href="/"><span>CLOSE <img src=
-        "/images/avslutt.png" id="avslutt-ikon" /></span> </a></button></a>
+        <a href="/">
+          <button id="avslutt" class="square">
+            <span>AVSLUTT <img src="/images/avslutt.png" id="avslutt-ikon" /></span>
+          </button>
+        </a>
       </div>
     </div>
 
     <div id="header">
-      <div id="header-text"></div>
+      <div id="header-text">
+        <% if (path == "/omtale") { %>
+          <p id="title"><%= book.title %></p>
+          <p id="sub-title"><%= book.authors %></p>
+        <% } else if (path == "/flere") { %>
+          <p id="title">Flere bøker av forfatteren</p>
+          <p id="sub-title"><%= book.authors %></p>
+        <% } else if (path == "/relaterte") { %>
+          <p id="title">Lignende verk</p>
+          <p id="sub-title">
+            <span><%= book.title %>&nbsp;</span>
+            <span style="font-weight:normal;"> av <%= book.authors %></span>
+          </p>
+        <% } %>
+      </div>
     </div>
 
     <div id="contents">
@@ -36,8 +58,8 @@
       <p>vi leter</p>
 
       <div id="avbryt">
-        <button id="avbryt-knapp" class="top-button">Avbryt</button><button id=
-        "retry-knapp" class="top-button">Prøv på nytt</button>
+        <button id="avbryt-knapp" class="top-button">Avbryt</button>
+        <button id="retry-knapp" class="top-button">Prøv på nytt</button>
       </div>
     </div>
 
