added front page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,34 @@
 </head>
 
 <body>
-<h1>Hei verden!</h1>
+  <div id="container" class="select-disable dim" style="background-image:url('/images/startscreen.png')" >
+    <input type="hidden" id="seeking_tnr" /><input type="hidden" id="seeking_title" />
+
+    <div id="left-bar">
+      <div class="logo"><img src="/images/logo.png" class="logo" /></div>
+
+      <div id="avslutt-container">
+        <a href="/"><button id="avslutt" class="square"><a href="/"><span>CLOSE <img src=
+        "/images/avslutt.png" id="avslutt-ikon" /></span></a></button></a>
+      </div>
+    </div>
+
+    <div id="header">
+      <div id="header-text"></div>
+    </div>
+
+    <div id="contents"></div>
+
+    <div id="vi-leter">
+      <p>vi leter</p>
+
+      <div id="avbryt">
+        <button id="avbryt-knapp" class="top-button">Avbryt</button><button id=
+        "retry-knapp" class="top-button">Prøv på nytt</button>
+      </div>
+    </div>
+
+    <div id="overlay"></div>
+  </div>
 </body>
 </html>
