fixed populate route

--- a/views/flere.ejs
+++ b/views/flere.ejs
@@ -57,7 +57,7 @@
 
         request.done(function(msg) {
           //$.get('/copy', function(data) {
-            window.location.replace("/omtale/"+tnr);
+            window.location.replace("/omtale/");
           //});
         });
 
