--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,9 @@
   <title>Aktive hyller</title>
   <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="/javascripts/jquery.min.js" ></script>
-  <script type="text/javascript" src="/javascripts/rfid.js"></script>
+  <% if (env != 'test') { %>
+    <script type="text/javascript" src="/javascripts/rfid.js"></script>
+  <% } %>
 </head>
 
 <body>
