--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,9 @@
 
   <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="/javascripts/jquery.min.js" ></script>
-  <script type="text/javascript" src="/javascripts/rfid.js"></script>
+  <% if (env != 'test') { %>
+    <script type="text/javascript" src="/javascripts/rfid.js"></script>
+  <% } %>
 </head>
 
 <body>
