Upgrade to Express 4

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
 
   <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="/javascripts/jquery.min.js" ></script>
+  <script type="text/javascript" src="/javascripts/ractive.min.js" ></script>
   <% if (env != 'test') { %>
     <script type="text/javascript" src="/javascripts/rfid.js"></script>
   <% } %>
